# gr-nordic

./: CMakeLists.txt  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  nordicConfig.cmake
docs/: CMakeLists.txt  README.nordic
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: Frame_Sync_Example.grc  HackRF_RTLSDR_loopback_test.grc  epy_block_0.py  microsoft_mouse_sniffer.py  nordic_auto_ack.py  nordic_channelized_receiver.py  nordic_channelized_transmitter.py  nordic_receiver.py  nordic_sniffer_scanner.py  nordic_sniffer_scanner_painter.py  nordic_transmitter.py  nordictap_test.grc  nordictap_test.py  nrf24_receiver.grc  nrf24_receiver.py  nrf24_tx.grc  nrf_scan.grc  nrf_scan.py  pluto_rx.grc  pluto_rx.py  simple_qt_gui.grc  simple_qt_gui.py  test_gfsk_mod.grc  test_gfsk_mod.py  test_gui.py  top_block.py  tx_nrf.grc  tx_nrf.py  tx_nrf_foo.grc  tx_nrf_foo.py  tx_nrf_python_block.grc  tx_nrf_python_block.py  tx_rx_loop.grc  tx_rx_loop.py
grc/: CMakeLists.txt  nordic_nordic_rx.block.yml  nordic_nordic_rx.xml  nordic_nordic_tx.block.yml  nordic_nordic_tx.xml  nordic_nordictap_printer.block.yml  nordic_nordictap_printer.xml  nordic_nordictap_transmitter.block.yml  nordic_nordictap_transmitter.xml  nordictap_transmitter.xml
include/nordic/: CMakeLists.txt  api.h  nordic_rx.h  nordic_tx.h
lib/: CMakeLists.txt  bit_shifting_byte_vector.cc  bit_shifting_byte_vector.h  enhanced_shockburst_packet.cc  enhanced_shockburst_packet.h  nordic_rx_impl.cc  nordic_rx_impl.h  nordic_tx_impl.cc  nordic_tx_impl.h  nordictap.h  qa_nordic.cc  qa_nordic.h  test_nordic.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  nordic_blocks.py  qa_nordic_rx.py  qa_nordic_tx.py
python/bindings/: CMakeLists.txt  nordic_rx_python.cc  nordic_tx_python.cc  python_bindings.cc
python/bindings/docstrings/: nordic_rx_pydoc_template.h  nordic_tx_pydoc_template.h
swig/: CMakeLists.txt  nordic_swig.i
wireshark/: nordic_dissector.lua
